@@ -2,6 +2,8 @@ swi-prolog (5.6.47-1) unstable; urgency=low
 
   * New upstream version (Closes: #295209, #308325, #425580, #422576)
   * Bump Debhelper compatibility to 5.
+  * Update config.sub and config.guess from autotools-dev
+      (Closes: #408076, #414181)
 
  -- Chris Lamb <chris@chris-lamb.co.uk>  Sun, 02 Dec 2007 23:26:00 +0000
 
